<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <CheckBox
        android:id="@+id/choco_syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_syrup"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="63dp" />

    <CheckBox
        android:id="@+id/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinkles"
        app:layout_constraintTop_toBottomOf="@+id/choco_syrup"
        tools:layout_editor_absoluteX="47dp" />

    <CheckBox
        android:id="@+id/crushed_nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crushed_nuts"
        app:layout_constraintTop_toBottomOf="@+id/sprinkles"
        tools:layout_editor_absoluteX="47dp" />

    <CheckBox
        android:id="@+id/cherries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cherries"
        app:layout_constraintTop_toBottomOf="@+id/crushed_nuts"
        tools:layout_editor_absoluteX="47dp" />

    <CheckBox
        android:id="@+id/orio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orio_cookie_crumbles"
        app:layout_constraintTop_toBottomOf="@+id/cherries"
        tools:layout_editor_absoluteX="47dp" />

    <Button
        android:id="@+id/toast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="showToast"
        android:text="@string/show_toast"
        app:layout_constraintTop_toBottomOf="@+id/orio"
        tools:layout_editor_absoluteX="47dp" />


</androidx.constraintlayout.widget.ConstraintLayout>